Configure last_produced_offset_poll_interval in local dev env
Signed-off-by: Marco Pracucci <marco@pracucci.com>

--- a/development/mimir-ingest-storage/config/mimir.yaml
+++ b/development/mimir-ingest-storage/config/mimir.yaml
@@ -14,6 +14,7 @@ ingest_storage:
   kafka:
     address: kafka:9092
     topic:   mimir-ingest
+    last_produced_offset_poll_interval: 500ms
 
 ingester:
   track_ingester_owned_series: true
